# st7789

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/ixora/: CMakeLists.txt
components/ixora/include/: ixora.h
components/ixora/src/: ixora.c
components/st7789/: CMakeLists.txt  sdkconfig
components/st7789/include/: st7789.h
components/st7789/src/: st7789.c
main/: CMakeLists.txt  TOHA.c
spiffs_image/: h.txt
tools/: converter.py  image.py
ttf-bin/: read.py
